# chat-rooms-app

./: README.md
client/src/: main.py
server/: CMakeLists.txt  scratch
server/includes/: commons.h  encrypt.h  networking.h
server/includes/networking/: encrypt.h  process.h  server.h
server/includes/services/: auth.h
server/src/: auth.txt  chat_rooms_app_server.c  chat_rooms_app_server_backup.c  encrypt.c  groups.txt  main.c  networking.c  server  server_backup  users.txt
server/src/includes/: auth.h  commons.h  encrypt.h  groups.h  internet.h  new_group.h  process.h  server.h
server/src/networking/: encrypt.c  process.c  server.c
server/src/services/: auth.c  new_group.c
